--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 
+if (MSVC)
+    add_compile_options(/Zc:__cplusplus)
+endif()
+
 option(GEMINI_BUILD_EXAMPLES "Build example applications" ON)
 
 file(GLOB_RECURSE GEMINI_SOURCES CONFIGURE_DEPENDS "src/*.cpp")
